# xapp052-generator

./: .gitignore  CMakeLists.txt  LICENSE  README.md
data/: taps.csv
include/: app_modes.h  lfsr_core.h
scripts/: visualize.py
src/: app_modes.cpp  lfsr_core.cpp  main.cpp
